# speedcast-task

./: .gitignore  CMakeLists.txt  LICENSE  README.md  adv_ping.py  makefile
src/: main.cpp  ping.c  ping_adv.cpp  ping_common.c  ping_common.h
src/ping_c/: ping_common.c  ping_common.h
